# our-srv

api/: .gitignore  README.md  mix.exs
api/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
api/lib/: our.ex  our_web.ex
api/lib/our/: application.ex  repo.ex
api/lib/our/schemas/: package.ex  ssh_key.ex  user.ex
api/lib/our_web/: auth.ex  endpoint.ex  router.ex  telemetry.ex
api/lib/our_web/controllers/: auth.ex  auth_json.ex  error_json.ex  fallback.ex  package.ex  package_json.ex  ssh_key.ex  ssh_key_json.ex  user.ex  user_json.ex
api/priv/repo/: seeds.exs
api/priv/repo/migrations/: 20251204133356_user.exs  20251204143510_package.exs  20251205184904_ssh-key.exs  20251207032250_srcinfo.exs
api/test/: test_helper.exs
api/test/our_web/controllers/: error_json_test.exs
api/test/support/: conn_case.ex  data_case.ex
git/gitshell/: Cargo.toml
git/gitshell/src/: main.rs
git/hooks/srcinfo/: Cargo.toml
git/hooks/srcinfo/src/: main.rs
git/ssh-key/: Cargo.toml
git/ssh-key/src/: main.rs
