[package]
name = "our-ssh-key"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
blake2b_simd = "1.0.3"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
